fix anchor elements wrapped by list items for unordered nav items to remove text decoration and list style type.

--- a/src/style.css
+++ b/src/style.css
@@ -57,10 +57,15 @@ column-gap: 5vw;
     font-size: 1.4rem;
 text-transform: lowercase;
     list-style-type: none;
-    padding: 2vw;
+    
+    /* padding: 2vw; */
     border-radius: 6px;
     /* border: 2px solid yellowgreen;     */
     cursor: pointer;
+}
+#nav-container a {
+    text-decoration: none;
+    color: black;
 }
 /* #nav-container li:hover {
 color: black;
